Visitor Logs/objects/Contact/fields/Certification_1__c.field-meta.xml
<CustomField>
    <fullName>Certification_1__c</fullName>
    <label>Certification 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>