Visitor Logs/objects/Contact/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <label>Employee Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>