Visitor Logs/objects/Contact/fields/Skill_2__c.field-meta.xml
<CustomField>
    <fullName>Skill_2__c</fullName>
    <label>Skill 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>