Visitor Logs/objects/Contact/fields/Skills_1__c.field-meta.xml
<CustomField>
    <fullName>Skills_1__c</fullName>
    <label>Skills 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>